# richyplayer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
richyplayer/: __init__.py  richyplayer.py
richyplayer/demo/: main.py
richyplayer/examples/demo/: main.py
richyplayer/examples/minimal/: main.py
richyplayer/examples/pyodide/: barebones.py  index.html  main.py
richyplayer/examples/pyscript/: index.html  main.py  pyscript.toml
