[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "richyplayer"
version = "1.0.0"
dependencies = [
  "pygame-ce>=2.4.1",
  "numpy~=2.0.2",
  "opencv-python~=4.10.0.84",
  "requests~=2.31.0",
  "moviepy>=2.2.1",
  "pygbag>=0.9.2"
]
requires-python = ">=3.9"
authors = [
  {name = "Richmond Kleinson"},
]
maintainers = [
  {name = "Richmond Kleinson"}
]
description = "a video player library for pygame(-ce), works on desktop and web "
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["richyplayer", "video player", "pygbag", "pyodide"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage = "https://github.com/richkdev/richyplayer"
Documentation = "https://github.com/richkdev/richyplayer/blob/main/README.md"
Repository = "https://github.com/richkdev/richyplayer"
Bug Tracker = "https://github.com/richkdev/richyplayer/issues"
Changelog = "https://github.com/richkdev/richyplayer/blob/main/README.md"
